--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Snyder Performing Arts Project</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+This is in a rough state.
